crates/swc_fast_ts_strip/tests/errors/modules.ts
module aModuleKeywordNamespace { }

declare module aModuleKeywordDeclareNamespace { }

export module aModuleKeywordExportedNamespace { }

export declare module aModuleKeywordExportedDeclareNamespace { }

namespace foo {
    export module aModuleKeywordExportedNamespaceInNamespace { }
}
